# boxgl

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  elements.cpp  elements.h  graphic.cpp  graphic.h  graphics.cpp  main.cpp  physics.cpp  physics.h  utils.h
Classes/: AppDelegate.cpp
Debug/: elements.json
box2d/: CMakeLists.txt
freeglut/: CMakeLists.txt
glfw/: CMakeLists.txt
glfw/src/: cocoa_window.m
include/: elements.h  graphic.h
json/: .gitignore  CMakeLists.txt
json/json/: CMakeLists.txt
json/json/src/: libjson.cpp
jsonrpc/: CMakeLists.txt
jsonrpc/jsonrpc/: CMakeLists.txt
jsonrpc/jsonrpc/include/: jsonrpc_common.h
jsonrpc/jsonrpc/src/: jsonrpc_client.cpp  jsonrpc_handler.cpp  networking.cpp
lib/: Box2D.lib  Box2D_release.lib  FreeGLUT.lib  json.lib  json_release.lib
proj.android/app/: AndroidManifest.xml  build.gradle
